# Drone_Trial_League

./: README.md
asv_wave_sim_gazebo/models/arena_spawn/: model.config  model.sdf
asv_wave_sim_gazebo/models/banner/: model.config  model.sdf
asv_wave_sim_gazebo/models/base_land/: model.config  model.sdf
asv_wave_sim_gazebo/models/cost_base/: model.config  model.sdf
asv_wave_sim_gazebo/models/equipmentA/: model.config  model.sdf
asv_wave_sim_gazebo/models/equipmentB/: model.config  model.sdf
asv_wave_sim_gazebo/models/equipmentC/: model.config  model.sdf
asv_wave_sim_gazebo/models/equipmentD/: model.config  model.sdf
asv_wave_sim_gazebo/models/equipmentE/: model.config  model.sdf
asv_wave_sim_gazebo/models/lake_bottom/: model.config  model.sdf
asv_wave_sim_gazebo/models/land_base/: model.config  model.sdf
asv_wave_sim_gazebo/models/measure_gas_high_base_left/: model.config  model.sdf
asv_wave_sim_gazebo/models/measure_gas_high_base_right/: model.config  model.sdf
asv_wave_sim_gazebo/models/measure_gas_land_base/: model.config  model.sdf
asv_wave_sim_gazebo/models/offshore/: model.config  model.sdf
asv_wave_sim_gazebo/models/oil_rig/: model.config  model.sdf
asv_wave_sim_gazebo/models/pier/: model.config  model.sdf
asv_wave_sim_gazebo/models/pipe_oil_offshore/: model.config  model.sdf
asv_wave_sim_gazebo/models/sensor_green/: model.config  model.sdf
asv_wave_sim_gazebo/models/sensor_red/: model.config  model.sdf
asv_wave_sim_gazebo/models/wam-v/: model.sdf
asv_wave_sim_gazebo/worlds/: Offshore.world  fase1.world  fase2.world  fase3.world  fase4.world
asv_wave_sim_gazebo_plugins/include/asv_wave_sim_gazebo_plugins/: WaveSimulationTrochoid.hh
controller_g/: CMakeLists.txt  package.xml  plugins.xml
controller_g/config/: config.yaml
controller_g/include/: ControllerG.h
controller_g/launch/: ControllerG.launch
controller_g/src/: ControllerG.cpp
controller_g_msgs/: CMakeLists.txt  package.xml
controller_g_msgs/srv/: GetStance.srv
gripper/: README.md  component_snippets.xacro  spawner_params.yaml  t650.xacro
gripper/meshes/: directory_of_meshes.yaml  tarot_t650_gripper_mecha_left.dae  tarot_t650_gripper_mecha_mount_battery.dae  tarot_t650_gripper_mecha_mount_center.dae  tarot_t650_gripper_mecha_mount_stretcher.dae  tarot_t650_gripper_mecha_right.dae
offshore_uav_pack/: CMakeLists.txt  package.xml
offshore_uav_pack/launch/: offshore_rig.launch  spawn_equip_wamv1.launch  spawn_equip_wamv2.launch  spawn_equip_wamv3.launch  spawn_mes_wamv.launch  spawn_wamv1.launch  spawn_wamv2.launch  spawn_wamv3.launch
offshore_uav_pack/start/: session.yml
offshore_uav_pack/start/custom_configs/: control_manager.yaml
offshore_uav_pack/start_fase_2/: session.yml
offshore_uav_pack/start_fase_3/: session.yml
offshore_uav_pack/start_fase_4/: session.yml  uav1_pos.yaml  world.yaml
offshore_uav_pack/start_fase_4/custom_configs/: control_manager.yaml
(+35 files in other folders)
